--- a/Packages/FSUtility/package.json
+++ b/Packages/FSUtility/package.json
@@ -2,7 +2,9 @@
   "author": "FunS",
   "description": "Utility for Unity.",
   "displayName": "FSUtility",
-  "keywords": [ "unity" ],
+  "keywords": [
+    "unity"
+  ],
   "license": "MIT",
   "name": "tw.funs.utility",
   "repository": {
@@ -10,6 +12,6 @@
     "url": "git+https://github.com/FunSTW/Unity-PackageManager.git"
   },
   "unity": "2021.3",
-  "unityRelease": "0f1", 
-  "version": "1.0.0"
+  "unityRelease": "0f1",
+  "version": "1.1.0"
 }
