--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -41,5 +41,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "DCDRC",
+      "url": "http://dcdrc.direct.quickconnect.to:4873/",
+      "scopes": [
+        "tw.dcdrc.upm"
+      ]
+    }
+  ]
 }
